# HTC-One-X-Depth-Charge

./: .gitignore  README.md
depthcharge_generator/: asm.py  consts.py  crypto.py  depthcharge.py  flasher_payload.py  utils.py
depthcharge_tinyusb/: CMakeLists.txt
depthcharge_tinyusb/src/: main.c  msc_disk.c  tusb_config.h  usb_descriptors.c
